# risklab-diagnostics-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/corpus/: chunks.jsonl  corpus_manifest.json
data/eval/: eval_questions.jsonl
data/structured/: data_manifest.json  diagnostics_summary.json  metric_reference.json  scenario_config.yaml  stress_summary.json
docs/: evaluation.md  overview.md
outputs/eval_results/: eval_results.json
src/app/: __init__.py  cli.py  config.py
src/eval/: __init__.py  __main__.py  runner.py
src/graph/: __init__.py  provider.py  workflow.py
src/ingestion/: __init__.py  phase2.py
src/retrieval/: __init__.py  hybrid.py  loader.py
src/schemas/: __init__.py  schemas.py
src/tools/: __init__.py  loader.py  risk_diagnostics.py
src/traces/: __init__.py  store.py
tests/: test_phase1_smoke.py  test_phase2_ingestion_smoke.py  test_phase3_retrieval_smoke.py  test_phase4_tool_smoke.py  test_phase5_graph_smoke.py  test_phase6_eval_smoke.py  test_phase7_cli_smoke.py
